--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -1,14 +1,22 @@
 # Use Node.js 18 as base image
 FROM node:18
 
+# Install build dependencies for bcrypt
+RUN apt-get update && apt-get install -y \
+    python3 \
+    make \
+    g++ \
+    && rm -rf /var/lib/apt/lists/*
+
 # Set working directory
 WORKDIR /app
 
 # Copy package files
 COPY backend/package*.json ./
 
-# Install dependencies
-RUN npm ci --no-audit --no-fund
+# Install dependencies and rebuild bcrypt for the correct architecture
+RUN npm install --no-audit --no-fund
+RUN npm rebuild bcrypt --build-from-source
 
 # Copy source code
 COPY backend/ .
@@ -17,4 +25,4 @@ COPY backend/ .
 EXPOSE 3001
 
 # Start the development server
-CMD ["npm", "run", "dev"] 
+CMD ["npm", "run", "dev", "--", "-p", "3001"] 
