--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,6 +1,9 @@
 # Use Node.js 20 as base image
 FROM node:20
 
+# Install curl for health checks
+RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
+
 # Set working directory
 WORKDIR /app
 
