Added Docker & Nginx

--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -1,10 +1,15 @@
 # Use Node.js 18 as base image
 FROM node:18
 
-# Install curl for health checks
+# Install curl for health checks and set timezone
 RUN apt-get update && apt-get install -y \
     curl \
+    tzdata \
     && rm -rf /var/lib/apt/lists/*
+
+# Set timezone to Morocco (Africa/Casablanca)
+ENV TZ=Africa/Casablanca
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
 # Set working directory
 WORKDIR /app
