--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,8 +1,12 @@
 # Use Node.js 20 as base image
 FROM node:20
 
-# Install curl for health checks
-RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
+# Install curl for health checks and set timezone
+RUN apt-get update && apt-get install -y curl tzdata && rm -rf /var/lib/apt/lists/*
+
+# Set timezone to Morocco (Africa/Casablanca)
+ENV TZ=Africa/Casablanca
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
 # Set working directory
 WORKDIR /app
