--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -17,11 +17,8 @@ COPY frontend/package*.json ./
 # Install dependencies
 RUN npm ci --no-audit --no-fund
 
-# Copy frontend source code
-COPY frontend/ .
-
 # Expose port 3000
 EXPOSE 3000
 
-# Start the Vite development server
+# Start the Vite development server with hot reload
 CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0", "--port", "3000"] 
