--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^9.0.2",
     "next": "15.4.1",
     "nodemailer": "^7.0.5",
+    "pdf-parse": "^1.1.1",
     "pg": "^8.16.3",
     "react": "19.1.0",
     "react-dom": "19.1.0"
