--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # ========================================
 # DATABASE CONFIGURATION
 # ========================================
-DATABASE_URL=postgresql://postgres:Azerty@host.docker.internal:5432/SBGS
+DATABASE_URL=postgresql://postgres:postgres@postgres:5432/sbgs_db
 
 # ========================================
 # JWT SECRETS
