--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,41 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Uploaded files and documents
+backend/public/uploads/
+backend/public/reports/
+backend/tmp/
+
+# Common document and image file types
+*.pdf
+*.doc
+*.docx
+*.jpg
+*.jpeg
+*.png
+*.gif
+*.bmp
+*.tiff
+*.svg
+*.ico
+
+# CV and resume files
+*CV*
+*Resume*
+*resume*
+*cv*
+
+# Identity documents
+*CIN*
+*cin*
+*ID*
+*id*
+
+# Internship documents
+*Convention*
+*convention*
+*Assurance*
+*assurance*
+*Stage*
+*stage*
