--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "bcrypt": "^6.0.0"
+    "bcrypt": "^6.0.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1"
   }
 }
