--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.11",
+    "@types/uuid": "^10.0.0",
     "bcryptjs": "^2.4.3",
     "drizzle-orm": "^0.44.3",
     "formidable": "^3.5.4",
@@ -19,7 +20,8 @@
     "pdf-parse": "^1.1.1",
     "pg": "^8.16.3",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
