--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,8 +67,8 @@ services:
       dockerfile: Dockerfile.backend
     volumes:
       - ./backend:/app
-      - /app/node_modules
-      - /app/.next
+      - backend_node_modules:/app/node_modules
+      - backend_next:/app/.next
     environment:
       - NODE_ENV=development
       - DATABASE_URL=${DATABASE_URL}
@@ -98,3 +98,7 @@ services:
 volumes:
   postgres_data:
     driver: local 
+  backend_node_modules:
+    driver: local
+  backend_next:
+    driver: local
