--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -17,8 +17,11 @@ COPY frontend/package*.json ./
 # Install dependencies
 RUN npm ci --no-audit --no-fund
 
+# Verify axios is installed
+RUN npm list axios || npm install axios
+
 # Expose port 3000
 EXPOSE 3000
 
 # Start the Vite development server with hot reload
-CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0", "--port", "3000"] 
+CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0", "--port", "3000"]
