--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,8 +42,8 @@ services:
       dockerfile: Dockerfile.frontend
     volumes:
       - ./frontend:/app
-      - /app/node_modules
-      - /app/dist
+      - frontend_node_modules:/app/node_modules
+      - frontend_dist:/app/dist
     environment:
       - NODE_ENV=development
       - VITE_API_BASE_URL=http://localhost
@@ -101,4 +101,8 @@ volumes:
   backend_node_modules:
     driver: local
   backend_next:
+    driver: local
+  frontend_node_modules:
+    driver: local
+  frontend_dist:
     driver: local
