--- a/nginx.conf
+++ b/nginx.conf
@@ -22,6 +22,15 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # WebSocket support
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            
+            # Cookie handling
+            proxy_cookie_path / "/; SameSite=None; Secure";
+            proxy_cookie_domain frontend $host;
         }
 
         # API routes
@@ -78,4 +87,4 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
-} 
+}
